--- a/Client/app/+pages/+clients/list/clients-list.component.html
+++ b/Client/app/+pages/+clients/list/clients-list.component.html
@@ -4,7 +4,7 @@
             <h2>Клиенты компании</h2>
             <div class="nav navbar-right panel_toolbox">
                 <button [routerLink]="['/pages', 'clients', 'add']" class="btn btn-md btn-success">
-                    <i class="fa fa-plus" aria-hidden="true"></i> Добавить
+                    <i class="fa fa-plus" aria-hidden="true"></i> Добавить клиента
                 </button>
             </div>
             <div class="clearfix"></div>
