--- a/Client/app/+pages/pages.component.html
+++ b/Client/app/+pages/pages.component.html
@@ -53,6 +53,7 @@
                             <li><a><i class="fa fa-thermometer-full"></i> Производство <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
                                     <li><a [routerLink]="['/pages', 'flavours']">Ароматизаторы</a></li>
+                                    <li><a [routerLink]="['/pages', 'receipts']">Рецепты</a></li>
                                 </ul>
                             </li>
                         </ul>
