--- a/Client/app/+pages/+receipts/edit/receipt-edit.component.html
+++ b/Client/app/+pages/+receipts/edit/receipt-edit.component.html
@@ -6,6 +6,16 @@
         <form class="form-horizontal" (ngSubmit)="submitForm()" [formGroup]="editForm">
 
             <div class="form-group">
+                <label>Название</label>
+                <input class="form-control" type="text" formControlName="title">
+                <span *ngIf="checkControlValidation('title', 'required')" class="text-danger">
+                            Поле обязательно
+                        </span>
+                <span *ngIf="checkControlValidation('title', 'maxlength')"
+                      class="text-danger">Значение должно быть в диапазоне до 100 символов</span>
+            </div>
+
+            <div class="form-group">
                 <label>PG, %</label>
                 <input class="form-control" type="number" formControlName="pgPercent" placeholder="PG">
                 <span *ngIf="checkControlValidation('pgPercent', 'required')" class="text-danger">
@@ -52,9 +62,9 @@
                     </div>
 
                     <div class="col-md-3 col-sm-3 col-xs-12  has-feedback">
-                        <input formControlName="percent" type="number" class="form-control has-feedback-left"
+                        <input formControlName="percent" type="number" class="form-control has-feedback-right"
                                placeholder="Процент">
-                        <span class="fa fa-arrow-up form-control-feedback left" aria-hidden="true"></span>
+                        <span class="fa fa-percent form-control-feedback right" aria-hidden="true"></span>
                         <span *ngIf="option.get('percent').hasError('required') && !option.get('percent').pristine"
                               class="text-danger">
                             Поле обязательно
