--- a/Client/app/+pages/+receipts/edit/receipt-edit.component.html
+++ b/Client/app/+pages/+receipts/edit/receipt-edit.component.html
@@ -43,53 +43,56 @@
                       class="text-danger">Значение должно быть в диапазоне 0 - 100</span>
             </div>
 
-            <fieldset formArrayName="receiptFlavours">
-                <div class="form-group"
-                     *ngFor="let option of editForm.controls['receiptFlavours'].controls; let i=index;"
-                     [formGroupName]="i">
+            <div class="row">
+                <fieldset formArrayName="receiptFlavours">
+                    <div class="form-group"
+                         *ngFor="let option of editForm.controls['receiptFlavours'].controls; let i=index;"
+                         [formGroupName]="i">
 
-                    <div class="col-md-8 col-sm-8 col-xs-12 has-feedback">
-                        <select type="text" class="form-control has-feedback-left" formControlName="flavourId">
-                            <option *ngFor="let option of flavoursAvailable" [ngValue]="option.id">
-                                {{option.title + ' (' + option.manufacturer + ')'}}
-                            </option>
-                        </select>
-                        <span class="fa fa-flask form-control-feedback left" aria-hidden="true"></span>
-                        <span *ngIf="option.get('flavourId').hasError('required') && !option.get('flavourId').pristine"
-                              class="text-danger">
+
+                        <div class="col-md-8 col-sm-8 col-xs-12 has-feedback">
+                            <select type="text" class="form-control has-feedback-left" formControlName="flavourId">
+                                <option *ngFor="let option of flavoursAvailable" [ngValue]="option.id">
+                                    {{option.title + ' (' + option.manufacturer + ')'}}
+                                </option>
+                            </select>
+                            <span class="fa fa-flask form-control-feedback left" aria-hidden="true"></span>
+                            <span *ngIf="option.get('flavourId').hasError('required') && !option.get('flavourId').pristine"
+                                  class="text-danger">
                             Поле обязательно
                         </span>
-                    </div>
+                        </div>
 
-                    <div class="col-md-3 col-sm-3 col-xs-12  has-feedback">
-                        <input formControlName="percent" type="number" class="form-control has-feedback-right"
-                               placeholder="Процент">
-                        <span class="fa fa-percent form-control-feedback right" aria-hidden="true"></span>
-                        <span *ngIf="option.get('percent').hasError('required') && !option.get('percent').pristine"
-                              class="text-danger">
+                        <div class="col-md-3 col-sm-3 col-xs-12  has-feedback">
+                            <input formControlName="percent" type="number" class="form-control has-feedback-right"
+                                   placeholder="Процент">
+                            <span class="fa fa-percent form-control-feedback right" aria-hidden="true"></span>
+                            <span *ngIf="option.get('percent').hasError('required') && !option.get('percent').pristine"
+                                  class="text-danger">
                             Поле обязательно
                         </span>
-                        <span *ngIf="option.get('percent').hasError('invalidPercent') && !option.get('percent').pristine"
-                              class="text-danger">
+                            <span *ngIf="option.get('percent').hasError('invalidPercent') && !option.get('percent').pristine"
+                                  class="text-danger">
                             Значение должно быть в диапазоне 0 - 100
                         </span>
+                        </div>
+
+                        <div class="col-md-1 col-sm-1">
+                            <button (click)="deleteDynamicControl(i)" type="button" class="btn btn-default form-control">
+                                <i class="fa fa-times" aria-hidden="true"></i>
+                            </button>
+                        </div>
                     </div>
 
-                    <div class="col-md-1 col-sm-1">
-                        <button (click)="deleteDynamicControl(i)" type="button" class="btn btn-default form-control">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                        </button>
+                    <div class="form-group">
+                        <div class="col-md-4">
+                            <button class="btn btn-default" (click)="addDynamicFormControl()" type="button">
+                                <i class="fa fa-plus" aria-hidden="true"></i> Добавить ароматизатор
+                            </button>
+                        </div>
                     </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-4">
-                        <button class="btn btn-default" (click)="addDynamicFormControl()" type="button">
-                            <i class="fa fa-plus" aria-hidden="true"></i> Добавить ароматизатор
-                        </button>
-                    </div>
-                </div>
-            </fieldset>
+                </fieldset>
+            </div>
 
             <button [disabled]="isProcessing || editForm.invalid" type="submit" class="btn btn-success pull-right">
                 <i *ngIf="isProcessing" class="fa fa-spinner fa-spin" aria-hidden="true"></i> Сохранить
