--- a/Client/app/+pages/pages.component.html
+++ b/Client/app/+pages/pages.component.html
@@ -44,6 +44,12 @@
                                     <li><a [routerLink]="['/pages', 'products']">Список</a></li>
                                 </ul>
                             </li>
+                            <li><a><i class="fa fa-archive"></i> Склад <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu">
+                                    <li><a [routerLink]="['/pages', 'storage', 'add']">Обновить состояние склада</a></li>
+                                    <li><a [routerLink]="['/pages', 'storage']">Список</a></li>
+                                </ul>
+                            </li>
                             <li><a><i class="fa fa-users"></i> Клиенты <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
                                     <li><a [routerLink]="['/pages', 'clients', 'add']">Добавить клиента</a></li>
