register as admin

--- a/Client/app/+pages/pages.component.html
+++ b/Client/app/+pages/pages.component.html
@@ -29,7 +29,7 @@
                         <ul class="nav side-menu">
                             <li><a><i class="fa fa-line-chart"></i> Аналитика <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li [routerLink]="['/pages', 'dashboard']"><a>Dashboard</a></li>
+                                    <li [routerLink]="['/pages', 'dashboard']"><a>Главная</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-shopping-cart"></i> Заказы <span class="fa fa-chevron-down"></span></a>
