print report settings

--- a/Client/app/+pages/pages.component.html
+++ b/Client/app/+pages/pages.component.html
@@ -110,7 +110,7 @@
         <!-- /page content -->
 
         <!-- footer content -->
-        <footer>
+        <footer id="media-footer">
             <div class="pull-right">
                 E-liquid Management System by Vape Vault
             </div>
