--- a/Client/app/shared/components/navbar.component.html
+++ b/Client/app/shared/components/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="top_nav">
+<div id="navbar-iframe" class="top_nav">
     <div class="nav_menu">
         <nav>
             <div class="nav toggle">
