--- a/Client/app/shared/layout/footer.component.html
+++ b/Client/app/shared/layout/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer text-muted">
+<footer id="media-footer" class="footer text-muted">
     <p class="text-muted">
         &copy; 2015-2016 {{'TITLE' | translate}}
     </p>
