--- a/Client/app/+pages/+products-storage/list/products-storage-list.component.html
+++ b/Client/app/+pages/+products-storage/list/products-storage-list.component.html
@@ -1,10 +1,10 @@
 <div class="col-md-12 col-xs-12">
     <div class="x_panel">
         <div class="x_title">
-            <h2>Склад продуктов компании</h2>
+            <h2>Поступление продукции на склад</h2>
             <div class="nav navbar-right panel_toolbox">
                 <button [routerLink]="['/pages', 'storage', 'add']" class="btn btn-md btn-success">
-                    <i class="fa fa-plus" aria-hidden="true"></i> Новое состояние склада
+                    <i class="fa fa-plus" aria-hidden="true"></i> Новое поступление
                 </button>
             </div>
             <div class="clearfix"></div>
@@ -15,8 +15,8 @@
                     <thead>
                     <tr>
                         <th>№</th>
-                        <th>Дата</th>
-                        <th>Сумма, шт</th>
+                        <th>Дата поступления</th>
+                        <th>Количество, шт</th>
                     </tr>
                     </thead>
                     <tbody>
