--- a/Client/app/+pages/+products-storage/details/product-storage-details.component.html
+++ b/Client/app/+pages/+products-storage/details/product-storage-details.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
-                <h2>Продукция на складе на {{formatDate(storage.date)}}</h2>
+                <h2>Поступление на склад от {{formatDate(storage.date)}}</h2>
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
