Remain component for storage

--- a/Client/app/+pages/pages.component.html
+++ b/Client/app/+pages/pages.component.html
@@ -46,8 +46,9 @@
                             </li>
                             <li><a><i class="fa fa-archive"></i> Склад <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a [routerLink]="['/pages', 'storage', 'add']">Обновить состояние склада</a></li>
-                                    <li><a [routerLink]="['/pages', 'storage']">Список</a></li>
+                                    <li><a [routerLink]="['/pages', 'storage', 'remain']">Текущее состояние склада</a></li>
+                                    <li><a [routerLink]="['/pages', 'storage', 'add']">Новое поступление продукции</a></li>
+                                    <li><a [routerLink]="['/pages', 'storage']">Список поступлений продукции</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-users"></i> Клиенты <span class="fa fa-chevron-down"></span></a>
