--- a/Client/app/+pages/+orders/list/orders-list.component.html
+++ b/Client/app/+pages/+orders/list/orders-list.component.html
@@ -1,11 +1,5 @@
 <div class="col-xs-12">
     <div class="x_panel">
-        <!--id: number;-->
-        <!--date: string;-->
-        <!--info: string;-->
-        <!--realization: boolean;-->
-        <!--payment: boolean;-->
-        <!--clientId: number;-->
         <div class="x_title">
             <h2>Заказы компании</h2>
             <div class="nav navbar-right panel_toolbox">
@@ -34,7 +28,7 @@
                         <td>
                             <b><a [routerLink]="['/pages','orders','details', order.id]">{{order.client.name}}</a></b>
                         </td>
-                        <td>{{order.date | date}}</td>
+                        <td>{{formatDate(order.date)}}</td>
                         <td>
                             <i *ngIf="order.payment" class="fa fa-check" aria-hidden="true"></i>
                             <i *ngIf="!order.payment" class="fa fa-remove" aria-hidden="true"></i>
