calculator edit realization to shipment

--- a/Client/app/+pages/+orders/details/order-details.component.html
+++ b/Client/app/+pages/+orders/details/order-details.component.html
@@ -23,8 +23,7 @@
                             От
                             <address>
                                 <strong>Vape Vault e-liquids</strong>
-                                <br>г. Харьков
-                                <br>Украина
+                                <br>vapevault.in.ua
                                 <br>Тел: +38 068 25 06 773
                                 <br>Email: vault.liquids@gmail.com
                             </address>
