--- a/Client/app/+pages/+orders/edit/order-edit.component.html
+++ b/Client/app/+pages/+orders/edit/order-edit.component.html
@@ -33,13 +33,13 @@
                     <label>
                         <input type="checkbox" [class.error]="!editForm.get('realization').valid"
                                formControlName="realization"/>
-                        Заказ под реализацию
+                        Заказ отправлен
                     </label>
                 </div>
                 <div class="checkbox">
                     <label><input type="checkbox" [class.error]="!editForm.get('payment').valid"
                                   formControlName="payment"/>
-                        Заказ уже оплачен
+                        Заказ оплачен
                     </label>
                 </div>
             </div>
