--- a/Client/app/+pages/+orders/list/orders-list.component.html
+++ b/Client/app/+pages/+orders/list/orders-list.component.html
@@ -19,7 +19,7 @@
                         <th>Дата</th>
                         <th>Оплачен</th>
                         <th>Инфо</th>
-                        <th>Реализация</th>
+                        <th>Отправлен</th>
                     </tr>
                     </thead>
                     <tbody>
